@@ -63,17 +63,16 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 516)
-(Parent-Version lpmud 3-3 515)
+(Project-Version lpmud 3-3 517)
+(Parent-Version lpmud 3-3 516)
 (Version-Log "
-  - (func_spec, prolang.y, interpret.c) I had to back out the recent change
-       as it interfered with the use of bitflags. We need a proper unsigned
-       type for this kind of thing.
+  - (sprintf.c) Format '%b' to print a number in binary notation (supplied
+       by Ralph - thanks!).
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Tue, 13 Apr 2004 18:31:53 -0600")
+(Checkin-Time "Tue, 13 Apr 2004 20:32:20 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -111,8 +110,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.72 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.579 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.343 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.580 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.344 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -303,7 +302,7 @@
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.5 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
-  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.60 644))
+  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.61 644))
   (src/strfuns.h (lpmud/b/51_strfuns.h 1.11.1.7 644))
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.16 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.23.1.7 644))
@@ -1233,7 +1232,7 @@
   (doc/efun/slice_array (lpmud/q/24_slice_arra 1.3 644))
   (doc/efun/snoop (lpmud/q/25_snoop 1.7 644))
   (doc/efun/sort_array (lpmud/c/36_sort_array 1.6.1.1 644))
-  (doc/efun/sprintf (lpmud/c/35_sprintf 1.3.1.16 644))
+  (doc/efun/sprintf (lpmud/c/35_sprintf 1.3.1.17 644))
   (doc/efun/sqrt (lpmud/q/26_sqrt 1.1.1.2 644))
   (doc/efun/sscanf (lpmud/q/27_sscanf 1.6 644))
   (doc/efun/start_mccp_compress (lpmud/e/b/3_start_mccp 1.2 644))
@@ -1340,7 +1339,7 @@
   (doc/efun.de/strlen.de (lpmud/g/b/0_strlen.de 1.1 640))
   (doc/efun.de/stringp.de (lpmud/t/5_stringp.de 1.1 644))
   (doc/efun.de/sscanf.de (lpmud/g/b/1_sscanf.de 1.1 640))
-  (doc/efun.de/sprintf.de (lpmud/l/36_sprintf.de 1.6 644))
+  (doc/efun.de/sprintf.de (lpmud/l/36_sprintf.de 1.7 644))
   (doc/efun.de/sqrt.de (lpmud/g/b/2_sqrt.de 1.1 640))
   (doc/efun.de/sort_array.de (lpmud/g/b/3_sort_array 1.1 640))
   (doc/efun.de/snoop.de (lpmud/g/b/4_snoop.de 1.1 640))
